# Characterization-utilities

./: .cruft.json  .gitignore  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/characterization_utilities/apps/: __init__.py  characterapp.py  directories.py  equipmentapp.py
src/characterization_utilities/convert/: common.py
src/characterization_utilities/convert/afm_convert/: parsing_routines.py
src/characterization_utilities/convert/em_convert/: __init__.py  fei_helios_matcher.py  parser.py  raith_velion_matcher.py  tescan_matcher.py  thermofisher_matecher.py  utils.py
src/characterization_utilities/example_uploads/: __init__.py
src/characterization_utilities/example_uploads/getting_started/: Prova.archive.json  README.md  U1502_metal_cross_5um_015.tif  sem_file_auto_pfib.nxs
src/characterization_utilities/mappers/: __init__.py
src/characterization_utilities/mappers/afm_mappers/: __init__.py  entry_mapper.py  instr_mapper.py  sample_mapper.py
src/characterization_utilities/mappers/base_mappers/: __init__.py  entry_mapper.py  sample_mapper.py  user_mapper.py
src/characterization_utilities/mappers/em_mappers/: __init__.py  entry_mapper.py  sample_mapper.py  user_mapper.py
src/characterization_utilities/schema_packages/: __init__.py  afm_schema.py  character.py  dataconverter.py  em_schema.py  equipments.py  saxs_waxs.py
tests/apps/: test_app.py
tests/data/: Prova.archive.json  test.archive.yaml
tests/schema_packages/: test_schema_package.py
tutorial/: tutorial.html
